--- a/Cargo.toml
+++ b/Cargo.toml
@@ -5,10 +5,9 @@ edition = "2021"
 
 [dependencies]
 ratatui = "0.29.0"
-tui-textarea = "0.7.0"
+tui-textarea = { version = "0.7.0", features = ["search"] }
 crossterm = "0.28.1"
 anyhow = "1.0"
-directories = "5.0"
 sysinfo = "0.30.5"
 encoding_rs = "0.8"
 serde = { version = "1.0", features = ["derive"] }
