--- a/Cargo.toml
+++ b/Cargo.toml
@@ -13,3 +13,5 @@ encoding_rs = "0.8"
 serde = { version = "1.0", features = ["derive"] }
 serde_json = "1.0"
 arboard = "3.4.0"
+chrono = "0.4"
+notify-rust = "4"
