--- a/config.json
+++ b/config.json
@@ -1,18 +1,13 @@
 {
 "targets": [
 { "name": "Google DNS", "address": "8.8.8.8:53" },
-{ "name": "Cloudflare", "address": "1.1.1.1:53" },
-{ "name": "OpenDNS", "address": "208.67.222.222:53" },
-{ "name": "Quad9", "address": "9.9.9.9:53" },
-{ "name": "Level3", "address": "4.2.2.1:53" },
-{ "name": "Bad IP", "address": "192.168.255.255:80" },
 { "name": "Punkt Nez", "address": "91.142.174.34:80" },
 { "name": "Local Router", "address": "192.168.0.1:80" }
 ],
 "commands": [
-{ "name": "Ping Google", "cmd": "ping", "args": ["8.8.8.8"] },
 { "name": "Ping Custom IP", "cmd": "ping", "args": ["%INPUT%"] },
 { "name": "IP Config", "cmd": "ipconfig", "args": ["/all"] },
-{ "name": "Check Disk", "cmd": "chkntfs", "args": ["C:"] }
+  {"name": "Open New CMD", "cmd": "cmd", "args": ["/c", "start", "Local Shell", "cmd"] },
+  {"name": "Open Admin CMD", "cmd": "powershell", "args": ["Start-Process", "cmd", "-Verb", "RunAs"]}
 ]
 }
